Refactoring simplify global search by removing separate page with type and pagination

--- a/resources/lang/he.json
+++ b/resources/lang/he.json
@@ -108,6 +108,8 @@
     "All messages have been deleted.": "כל ההודעות שנמחקו.",
     "You currently have no notifications, but maybe they will appear later.": "כרגע אין התראות, אבל אולי יהיו במשך.",
     "Sign in with another user.": "התחבר עם חשבון אחר.",
+    "Searching results": "תוצאות החיפוש",
+    "On request: :query": "עבור השאילתה: :query",
     "Add row": "הוסף שורה",
     "Configure columns": "הגדר עמודות",
     "User profile and privileges, including their associated role.": "פרטים כמו שם, כתובת דואר אלקטרוני וסיסמא",
