--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -88,6 +88,7 @@
     "Notifications": "Уведомления",
     "Object search": "Поиск объекта",
     "Oh snap!": "О нет!",
+    "On request: :query": "По запросу: :query",
     "Once the account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Как только учетная запись будет удалена, все ее ресурсы и данные будут удалены безвозвратно. Перед удалением вашей учетной записи, пожалуйста, загрузите любые данные или информацию, которые вы хотите сохранить.",
     "Original referrer: (e.g. google, newsletter)": "Оригинальный реферер: (например, Google, Новостная рассылка)",
     "Paid keywords: (e.g. running+shoes)": "Оплачиваемые ключевые слова: (например, бег+обувь)",
@@ -116,6 +117,7 @@
     "Search": "Поиск",
     "Search file": "Поиск файлов",
     "Search...": "Поиск...",
+    "Searching results": "Результаты поиска",
     "Send": "Отправить",
     "Sign in to your account": "Войдите в свою учетную запись",
     "Sign in with another user.": "Сменить пользователя.",
