--- a/resources/lang/fa.json
+++ b/resources/lang/fa.json
@@ -99,6 +99,7 @@
     "Notifications": "اعلانات",
     "Object search": "جستجو اشیا",
     "Oh snap!": "اوه اوه!",
+    "On request: :query": "بنا به درخواست: :query",
     "Once the account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "پس از حذف حساب کاربری، تمام منابع و داده های آن برای همیشه حذف می شوند. لطفاً قبل از حذف حساب کابری خود ، هرگونه داده یا اطلاعاتی را که می خواهید حفظ شود بارگیری کنید.",
     "Original referrer: (e.g. google, newsletter)": "ارجاع دهنده اصلی: (به عنوان مثال گوگل ، خبرنامه)",
     "Layouts Overview": "طرح کلی",
@@ -129,6 +130,7 @@
     "Search file": "جست و جوی فایل",
     "Search": "جستجو",
     "Search...": "جستجو...",
+    "Searching results": "نتایج جستجو",
     "Send": "ارسال",
     "Sign in to your account": "وارد حسابتان شوید",
     "Sign in with another user.": "با کاربر دیگری وارد شوید.",
