--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -88,6 +88,7 @@
     "Notifications": "Értesítések",
     "Object search": "Kereső",
     "Oh snap!": "Hoppá!",
+    "On request: :query": "Eredmények: :query",
     "Once the account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "A törlés végleges, győződj meg róla, hogy nem lesz-e adatvesztés!",
     "Original referrer: (e.g. google, newsletter)": "Eredeti forrás: (pl. google, hírlevél)",
     "Layouts Overview": "Áttekintő nézet",
@@ -117,6 +118,7 @@
     "Search file": "Fájl keresése",
     "Search": "Keresés",
     "Search...": "Keresés...",
+    "Searching results": "Keresési eredmények",
     "Send": "Küldés",
     "Sign in to your account": "Bejelentkezés",
     "Sign in with another user.": "Belépés más nevében.",
