--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -131,6 +131,8 @@
     "Welcome": "Selamat Datang",
     "Export": "Ekspor",
     "Sign in with another user.": "Masuk sebagai pengguna lain",
+    "Searching results": "Hasil Pencarian",
+    "On request: :query": null,
     "Add row": "Tambah baris",
     "Create User": "Buat User"
 }
