--- a/resources/lang/kz.json
+++ b/resources/lang/kz.json
@@ -88,6 +88,7 @@
     "Notifications": "Хабарландырулар",
     "Object search": "Объектіні іздеу",
     "Oh snap!": "О, жоқ!",
+    "On request: :query": "Сұраныс бойынша: :query",
     "Once the account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Тіркелгі жойылғаннан кейін оның барлық ресурстары мен деректері біржола жойылады. Тіркелгіні жою алдында сақтағыңыз келетін кез келген деректерді немесе ақпаратты жүктеп алыңыз.",
     "Original referrer: (e.g. google, newsletter)": "Түпнұсқа сілтеме беруші: (мысалы, Google, Newsletter)",
     "Paid keywords: (e.g. running+shoes)": "Ақылы кілт сөздер: (мысалы, жүгіру+аяқ киім)",
@@ -116,6 +117,7 @@
     "Search": "Іздеу",
     "Search file": "Файлдарды іздеу",
     "Search...": "Іздеу...",
+    "Searching results": "Іздеу нәтижелері",
     "Send": "Жіберу",
     "Sign in to your account": "Тіркелгіңізге кіріңіз",
     "Sign in with another user.": "Пайдаланушыны өзгерту.",
