--- a/resources/lang/pt.json
+++ b/resources/lang/pt.json
@@ -85,6 +85,7 @@
     "Notifications": "Notificações",
     "Object search": "Pesquisa de objeto",
     "Oh snap!": "Oh, bolas!",
+    "On request: :query": "Na consulta: :query",
     "Once the account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Assim que a conta for excluída, todos os seus recursos e dados serão excluídos permanentemente. Antes de excluir a sua conta, descarregue todos os dados ou informações que desejar guardar.",
     "Original referrer: (e.g. google, newsletter)": "Referenciador original: (ex.: google, newsletter)",
     "Paid keywords: (e.g. running+shoes)": "Palavras-chave pagas: (ex.: corrida+sapatos)",
@@ -112,6 +113,7 @@
     "Search": "Pesquisar",
     "Search file": "Pesquisar arquivos",
     "Search...": "Pesquisar...",
+    "Searching results": "A pesquisar resultados",
     "Send": "Enviar",
     "Sign in to your account": "Entre na sua conta",
     "Sign in with another user.": "Entrar com outro utilizador.",
