--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -88,6 +88,7 @@
     "Notifications": "Notificações",
     "Object search": "Pesquisa de objeto",
     "Oh snap!": "Oh, não!",
+    "On request: :query": "Na requisição: :consulta",
     "Once the account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Assim que a conta for excluída, todos os seus recursos e dados serão excluídos permanentemente. Antes de excluir esta conta, salve todos os dados ou informações que deseja manter.",
     "Original referrer: (e.g. google, newsletter)": "Referenciador original: (ex.: google, newsletter)",
     "Layouts Overview": "Visão geral de layouts",
@@ -117,6 +118,7 @@
     "Search": "Pesquisar",
     "Search file": "Pesquisar arquivo",
     "Search...": "Pesquisar...",
+    "Searching results": "Pesquisando resultados",
     "Send": "Enviar",
     "Sign in to your account": "Entre na sua conta",
     "Sign in with another user.": "Entrar com outro usuário.",
