--- a/resources/lang/tk.json
+++ b/resources/lang/tk.json
@@ -87,6 +87,7 @@
     "Notifications": "Bilidirşler",
     "Object search": "Obýekt gözlegi",
     "Oh snap!": "Wah!",
+    "On request: :query": "Talap boýunça: :query",
     "Once the account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Hasap pozulandan soň, oňa degişli ähli resurslar we maglumatlar gaýtarylmazdan pozular. Hasaby pozmazdan öň, haýyş, saklasyňyz gelýän ähli maglumatlaryňyzy ýükläň.",
     "Original referrer: (e.g. google, newsletter)": "Asyl salgylanma: (meselem, google, habar ýazylmalary)",
     "Paid keywords: (e.g. running+shoes)": "Tölegli açar sözler: (meselem, ylgamak + aýakgap)",
@@ -115,6 +116,7 @@
     "Search": "Gözleg",
     "Search file": "Faýl gözlegi",
     "Search...": "Gözleg...",
+    "Searching results": "Gözlegiň netijeleri",
     "Send": "Ugratmak",
     "Sign in to your account": "Öz hasabyňyza giriň",
     "Sign in with another user.": "Ulanyjyny çalşmak.",
